--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+<link rel="icon" type="image/png" href="favicon.ico"/>
 <link href='http://fonts.googleapis.com/css?family=Orbitron|Telex|Share+Tech+Mono' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="dong.css">
 <title>
