--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 </span></pre>
 <video autoplay loop id="myVideo">
 <source src="http://%4C%45%57%49%53.network/fb.mp4" type="video/mp4">
+  <!-- lol l33t obFuScaTioN its 4 crawlers b4 u ask less roxerd0xer500.py begging -->
 </video>
 </body>
 </html>
